2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (add_to_treeview), (remove_from_treeview),
	(update_in_treeview), (changed_on_disk_cb), (style_init):
	* appearance-themes.c: (theme_select_name),
	(theme_set_custom_from_theme), (theme_changed_on_disk_cb),
	(theme_thumbnail_done_cb):
	* theme-installer.c: (gnome_theme_installer_run):
	* theme-util.c: (theme_find_in_model):
	* theme-util.h: listen to on-disk theme changes in the details tabs, too

2007-06-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (generic_theme_delete),
	(gtk_theme_delete_cb), (window_theme_delete_cb),
	(icon_theme_delete_cb), (style_init), (prepare_list),
	(check_color_schemes_enabled): hook up the delete buttons

2007-06-22  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	Tweak the metatheme icon view's margin and spacings to better fit to the
	new thumbnails.

	* theme-thumbnailing.png:
	Modernized and brought to the size of the new metatheme thumbnails.
 
2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): fix compiler warning

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: remove install buttons from individual detail pages
	and HIG-ify the "revert to defaults" label

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (file_theme_type): just check for configure
	instead of configure.in since configure.ac is valid as well; we still
	need a better way to identify engines...

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* appearance-main.c: added the names of the pages to the help strings
	for --show-page argument.

2007-06-17  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance.glade: add --show-page option to specify the page with
	which to start

2007-06-17  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: (desktop_init): (wp_view_tooltip_cb):