@@ -1,5 +1,10 @@
 2007-06-23  Jens Granseuer  <jensgr@gmx.net>
 
+	* theme-util.c: (theme_delete): use STOCK_DELETE instead of STOCK_OK in
+	the confirmation dialog
+
+2007-06-23  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (add_to_treeview), (remove_from_treeview),
 	(update_in_treeview), (changed_on_disk_cb), (style_init):
 	* appearance-themes.c: (theme_select_name),
